Mem Sarvesvara/ASSIGNMENT 4/Kubernetes/flask service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask-app
DOCKER

FROM python:3.10-buster

WORKDIR /app

COPY . .

RUN pip install --no-cache-dir -r requirements.txt

CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
 
app.py

import uuid
from flask import Flask

instance_id = uuid.uuid4().hex
app = Flask(__name__)


@app.route("/")
def get_instance_id():
    return f"<b style='font-size:30px;color:red;'>Instance ID: {instance_id}</b>"



if __name__ == "__main__":
    app.run(port=5000, host="0.0.0.0")
